# make-it-roll

./: .gitignore  CMakeLists.txt  runTest.sh
app/: CMakeLists.txt
app/scripts/: app.xml
smoke-test/fixtures/: fixture.xml
src/: CMakeLists.txt  CtrlModule.cpp  main.cpp
src/include/: CtrlModule.h
tests/: CMakeLists.txt  RollingTest.cpp  RollingTest.h
tests/fixtures/: make-it-roll_fixture.xml
tests/suites/: testSuite.xml
